Correct footer alignment, and sizing.

--- a/sass/site/footer/_site-footer.scss
+++ b/sass/site/footer/_site-footer.scss
@@ -4,11 +4,10 @@
 
 	.widget-area,
 	.site-info {
-		margin: calc(2 * #{$size__spacing-unit}) $size__spacing-unit;
+		margin: calc(2 * #{$size__spacing-unit}) auto;
+		max-width: 100%;
 
-		@include media(tablet) {
-			margin: calc(3 * #{$size__spacing-unit}) $size__site-margins;
-		}
+		@include postContentMaxWidth();
 	}
 
 	.widget-column {
@@ -25,6 +24,7 @@
 
 	.site-info {
 		color: $color__text-light;
+		font-size: $font__size-xs;
 
 		a {
 			color: inherit;
